[project]
name = "comfyui-audio-annotation"
description = "ComfyUI nodes for audio transcription and annotation JSON export"
version = "0.1.0"
license = { text = "MIT License" }
dependencies = [
  "faster-whisper>=1.1.0,<2",
  "librosa>=0.10.2,<1",
  "numpy>=1.26,<3",
  "rapidfuzz>=3.9,<4",
  "soundfile>=0.12.1,<1",
]

[project.urls]
Repository = "https://github.com/Dodzilla/ComfyUI-AudioAnnotation"

[tool.comfy]
PublisherId = "dodzilla"
DisplayName = "ComfyUI Audio Annotation"
Icon = ""
